[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34", features = ["rt-multi-thread", "macros", "io-std"] }
async-trait = "0.1"
either = "1.9"
futures = "0.3.29"
libp2p = { features = [ "tokio", "gossipsub", "dns", "identify", "kad", "macros", "noise", "ping", "pnet", "tcp", "websocket", "yamux", "tls", "request-response", "cbor"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.193", features = ["derive"] }
anyhow = { version  = "1.0.75", features = ["backtrace"]}
warp = "0.3.6"
serde_json = "1.0"
clap = { version = "4.4.11", features = ["derive"] }
log = "0.4.20"
chrono = "0.4.31"
env_logger = "0.10.1"
